--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "best_care_dental_clinic",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#BBE062",
+    "theme_color": "#BBE062",
     "description": "Best care dental clinic project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
